# PeakGen

./: CMakeLists.txt  powershell.txt  run.ps1
include/: camera.h  grid.h  lighting.h  pathfinding.h  shader.h  terrain.h
src/: camera.cpp  grid.cpp  lighting.cpp  main.cpp  pathfinding.cpp  shader.cpp  terrain.cpp
